ensure navigator block sizes to its content (had wrong size when only next/last links with microthumbs were shown, all content floated).
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@10871 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/themes/matrix/theme.css
+++ b/themes/matrix/theme.css
@@ -460,6 +460,11 @@ div.gbNavigator div.next-and-last {
   float: right;
 }
 
+div.gbNavigator div.no-previous {
+  float: none !important;
+  text-align: right;;
+}
+
 div.gbNavigator a.first {
   padding-left: 27px;
   background: url("images/nav_first.gif") 0% 50% no-repeat;
