--- a/themes/slider/theme.css
+++ b/themes/slider/theme.css
@@ -369,7 +369,7 @@ div.block-core-ItemInfo span.summary {
 
 #gsNavBar div.gbBreadCrumb a, #gsNavBar div.gbBreadCrumb span {
     padding: 0 0 0 14px;
-    background: url('images/icon_path_separator.gif') no-repeat left;
+    background: url('../matrix/images/icon_path_separator.gif') no-repeat left;
 }
 
 #gsNavBar div.gbBreadCrumb a.BreadCrumb-1 {   /* no :first-child in IE */
@@ -537,30 +537,6 @@ div.gbTabBar span.giSelected div {
 #gallery.opera #giFormUsername, #gallery.opera .giFormUsername,
 #gallery.opera #giFormGroupname, #gallery.opera #giFormPassword {
     background-position: right center;
-}
-
-div.gbNavigator div.next-and-last {
-  float: right;
-}
-
-div.gbNavigator a.first {
-  padding-left: 27px;
-  background: url("images/nav_first.gif") 0% 50% no-repeat;
-}
-
-div.gbNavigator a.previous {
-  padding-left: 27px;
-  background: url("images/nav_prev.gif") 0% 50% no-repeat;
-}
-
-div.gbNavigator a.next {
-  padding-right: 27px;
-  background: url("images/nav_next.gif") 100% 50% no-repeat;
-}
-
-div.gbNavigator a.last {
-  padding-right: 27px;
-  background: url("images/nav_last.gif") 100% 50% no-repeat;
 }
 
 div.gbSearchBlock a.advanced {
